--- a/config.yaml
+++ b/config.yaml
@@ -13,18 +13,22 @@ permalinks:
 # The value of pre is the icon name
 menu:
   nav:
-  - name: FinBIF Blog
+  - name: Home
+    pre: home
+    url: /
+    weight: 1
+  - name: Posts
     pre: edit
     url: /post/
-    weight: 1
+    weight: 2
   - name: Tags
     pre: tag
     url: /tags/
-    weight: 2
+    weight: 3
   - name: RSS
     pre: rss
     url: /index.xml
-    weight: 3
+    weight: 4
 
 params:
   includeBootstrapJs: false
